# NewMiko

./: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci_build.yml
annotation/: build.gradle  build.gradle.kts
app/: NewMiko2025.jks  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: fragment_pop_enter.xml  fragment_pop_exit.xml  slide_in_from_right.xml  slide_out_to_left.xml
app/src/main/res/layout/: activity_main.xml  activity_setting.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: preferences.xml
core/: build.gradle.kts  proguard-rules.pro
core/src/main/res/drawable/: blue_button.xml  custom_edit.xml  layout_back_rounded.xml  recyclerview_shape.xml  tip_dialog_shape.xml
core/src/main/res/layout/: actionbar_home.xml  activity_home.xml  auto_reply.xml  blurview.xml  common_item.xml  content_main.xml  (+14 more)
docs/release/: 0.0.1.md  1.0.1.md  1.0.2.md  1.0.3.md  1.0.4.md  1.0.5.md
gradle/: libs.versions.toml
loader/: build.gradle  build.gradle.kts
loader/src/main/assets/: xposed_init
native/: build.gradle.kts
native/src/main/cpp/: CMakeLists.txt  c_init.cpp  native_hook_api.h  nativelib.cpp
native/src/main/cpp/miko_core/: miko_core_bridge.cpp  miko_core_bridge.h
native/src/main/cpp/util/: FileUtil.cpp  FileUtil.h  JniUtils.cpp  JniUtils.h
service/: build.gradle.kts
(+172 files in other folders)
